--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="index.html" class="nav-link"><img src="/images/logo-buzz.png" alt="" /></a>
+            <a href="index.html" class="nav-link"><img src="/images/agbor-logo.png" alt="" /></a>
             <!-- E-D -->
         </div>
         <button class="nav-toggle" aria-label="toggle navigation">
@@ -76,6 +76,7 @@
             <p>
                 I live in Lekki - Nigeria and code daily. I can do cool stuffs with HTML, CSS, Javascript, React.js and obviously the awesome things accompanied with React ecosystem. Besides coding, I also love music, reading, public speaking and building computer networks!!!
             </p>
+             <a href="./assets/Agbor Ojen Resume.pdf"><button class="resume" >Download Resume</button></a>
         </div>
 
         <img src="/images/office.jpg" alt="" class="about-me-img">
