--- a/incomeExpense.html
+++ b/incomeExpense.html
@@ -26,7 +26,7 @@
   <body>
     <header>
       <div class="logo">
-        <a href="index.html" class="nav-link"><img src="/images/logo-buzz.png" alt="" /></a>
+        <a href="index.html" class="nav-link"><img src="/images/agbor-logo.png" alt="" /></a>
         <!-- E-D -->
       </div>
       <button class="nav-toggle" aria-label="toggle navigation">
