--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <div class="logo">
             <a href="index.html" class="nav-link"><img src="/images/agbor-logo.png" alt="" /></a>
-            <!-- E-D -->
+            <!-- A-O -->
         </div>
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
@@ -76,7 +76,7 @@
             <p>
                 I live in Lekki - Nigeria and code daily. I can do cool stuffs with HTML, CSS, Javascript, React.js and obviously the awesome things accompanied with React ecosystem. Besides coding, I also love music, reading, public speaking and building computer networks!!!
             </p>
-             <a href="./assets/Agbor Ojen Resume.pdf"><button class="resume" >Download Resume</button></a>
+             <a href="./assets/Agbor Resume FrontEnd.pdf"><button class="resume" >Download Resume</button></a>
         </div>
 
         <img src="/images/office.jpg" alt="" class="about-me-img">
@@ -99,17 +99,6 @@
                 <img src="./images/event.PNG" alt="" class="portfolio-img img-fuid">
             </a>
 
-            <!-- <a href="##" class="portfolio-item">
-                <img src="/images/FireShot Capture 058 - BuzzLife - localhost.png" alt="" class="portfolio-img">
-            </a>
-
-            <a href="##" class="portfolio-item">
-                <img src="/images/FireShot Capture 058 - BuzzLife - localhost.png" alt="" class="portfolio-img">
-            </a>
-
-            <a href="##" class="portfolio-item">
-                <img src="/images/FireShot Capture 058 - BuzzLife - localhost.png" alt="" class="portfolio-img">
-            </a> -->
         </div>
     </section>
 
