--- a/facerecognition.html
+++ b/facerecognition.html
@@ -56,10 +56,10 @@
           alt=""
           class="portfolio-img img-fuid"
         />
-        <div class="icons", align="center">
-          <a href="https://github.com/agborojenjr/facerecognition"
+        <div  align="center">
+          Click here<a href="https://github.com/agborojenjr/facerecognition"
             ><i class="fas fa-code"></i></a
-          >
+          > to visit GitHub
         </div>
       </div>
 
