--- a/incomeExpense.html
+++ b/incomeExpense.html
@@ -57,9 +57,9 @@
           class="portfolio-img img-fuid"
         />
         <div class="icons", align="center">
-          <a href="https://github.com/agborojenjr/ExpenseTracker/tree/master"
+          Click here<a href="https://github.com/agborojenjr/ExpenseTracker/tree/master"
             ><i class="fas fa-code"></i></a
-          >
+          >to visit GitHub
         </div>
       </div>
 
