--- a/techevent.html
+++ b/techevent.html
@@ -53,7 +53,7 @@
       <div class="view-img">
           <img src="./images/event.PNG">
         <div class="icons", align="center">
-          <a href="https://github.com/agborojenjr/agborojenjr.github.io"><i class="fas fa-code"></i></a>
+          Click here<a href="https://github.com/agborojenjr/agborojenjr.github.io"><i class="fas fa-code"></i></a>to visit GitHub
         </div>
       </div>
 
